--- a/OLTRA/Resources/MainWindow.glade
+++ b/OLTRA/Resources/MainWindow.glade
@@ -159,13 +159,12 @@ Author: Brian J Hoskins
       <!-- column-name Enabled -->
       <column type="gboolean"/>
     </columns>
-    <data>
-      <row>
-        <col id="0">TEST</col>
-        <col id="1" translatable="yes">TEST!</col>
-        <col id="2">True</col>
-      </row>
-    </data>
+  </object>
+  <object class="GtkListStore" id="lst_projects2">
+    <columns>
+      <!-- column-name Project -->
+      <column type="Project"/>
+    </columns>
   </object>
   <object class="GtkWindow" id="window1">
     <property name="width_request">1024</property>
@@ -654,7 +653,8 @@ ID</property>
                                                 <property name="margin_right">5</property>
                                                 <property name="margin_top">5</property>
                                                 <property name="margin_bottom">5</property>
-                                                <property name="model">lst_projects</property>
+                                                <property name="model">lst_projects2</property>
+                                                <property name="enable_search">False</property>
                                                 <property name="enable_grid_lines">both</property>
                                                 <child internal-child="selection">
                                                   <object class="GtkTreeSelection" id="treeview-selection4"/>
@@ -663,12 +663,14 @@ ID</property>
                                                   <object class="GtkTreeViewColumn" id="col_proj_name">
                                                     <property name="resizable">True</property>
                                                     <property name="title" translatable="yes">NAME</property>
+                                                    <property name="clickable">True</property>
                                                     <child>
-                                                      <object class="GtkCellRendererText" id="cell_text_name">
+                                                      <object class="GtkCellRendererText" id="cell_proj_text_name">
                                                         <property name="editable">True</property>
+                                                        <property name="placeholder_text">Project Name</property>
+                                                        <signal name="edited" handler="OnCellTextNameEdited" swapped="no"/>
                                                       </object>
                                                       <attributes>
-                                                        <attribute name="sensitive">1</attribute>
                                                         <attribute name="text">0</attribute>
                                                       </attributes>
                                                     </child>
@@ -679,8 +681,9 @@ ID</property>
                                                     <property name="resizable">True</property>
                                                     <property name="title" translatable="yes">DESCRIPTION</property>
                                                     <child>
-                                                      <object class="GtkCellRendererText" id="cell_text_description">
+                                                      <object class="GtkCellRendererText" id="cell_proj_text_description">
                                                         <property name="editable">True</property>
+                                                        <property name="placeholder_text">Project Description</property>
                                                       </object>
                                                       <attributes>
                                                         <attribute name="text">1</attribute>
@@ -692,7 +695,7 @@ ID</property>
                                                   <object class="GtkTreeViewColumn" id="col_proj_status">
                                                     <property name="title" translatable="yes">STATUS</property>
                                                     <child>
-                                                      <object class="GtkCellRendererToggle" id="cell_toggle_status"/>
+                                                      <object class="GtkCellRendererToggle" id="cell_proj_toggle_status"/>
                                                       <attributes>
                                                         <attribute name="active">2</attribute>
                                                       </attributes>
@@ -724,7 +727,7 @@ ID</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="receives_default">True</property>
-                                                <signal name="clicked" handler="onProjStatusClicked" swapped="no"/>
+                                                <signal name="clicked" handler="OnProjStatusClicked" swapped="no"/>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">1</property>
@@ -750,6 +753,7 @@ ID</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="receives_default">True</property>
+                                                <signal name="clicked" handler="OnProjSaveClicked" swapped="no"/>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">0</property>
@@ -762,6 +766,7 @@ ID</property>
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">True</property>
                                                 <property name="receives_default">True</property>
+                                                <signal name="clicked" handler="OnProjDeleteClicked" swapped="no"/>
                                               </object>
                                               <packing>
                                                 <property name="left_attach">1</property>
